test/should-fail/bad-globals-native.warn
在定义全局变量时使用[GetObjectName]会导致魔兽崩溃。